--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,3 +92,9 @@ flutter:
     # - assets/images/
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  
+dependency_overrides:
+  carousel_slider:
+    git:
+      url: https://github.com/serenader2014/flutter_carousel_slider.git
+      ref: master
