--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
+    # --- 2 thư vien thanh toan ---
+  random_string: ^2.3.1
+  flutter_spinkit: ^5.2.0
+    # ---
 dev_dependencies:
   flutter_test:
     sdk: flutter
