--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,3 +103,8 @@ dependency_overrides:
     git:
       url: https://github.com/serenader2014/flutter_carousel_slider.git
       ref: master
+
+carousel_slider: ^4.2.1
+firebase_core: ^2.27.0
+cloud_firestore: ^4.15.8
+intl: ^0.19.0 # Để định dạng tiền tệ
