--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,14 @@ dependencies:
     # --- THÊM THƯ VIỆN NÀY ĐỂ GỌI API ---
   http: ^1.0.0 # (hoặc phiên bản mới hơn)
     # ---
+  image_picker: ^1.0.4  # Thêm thư viện này để chọn ảnh
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^4.2.1
   cloud_firestore: ^6.1.0
+  firebase_storage: ^13.0.4
 
 dev_dependencies:
   flutter_test:
