--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
     # --- THÊM THƯ VIỆN NÀY ĐỂ GỌI API ---
-  http: ^1.0.0 # (hoặc phiên bản mới hơn)
+  http: ^1.6.0 # (hoặc phiên bản mới hơn)
     # ---
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^4.2.1
   cloud_firestore: ^6.1.0
+  firebase_auth: ^6.1.2
+
 
 dev_dependencies:
   flutter_test:
