--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
     # --- THÊM THƯ VIỆN NÀY ĐỂ GỌI API ---
   http: ^1.0.0 # (hoặc phiên bản mới hơn)
     # ---
-
+  google_generative_ai: ^0.4.7 # Kiểm tra phiên bản mới nhất nếu có
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
