--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
     # ---
   google_generative_ai: ^0.4.7 # Kiểm tra phiên bản mới nhất nếu có
   image_picker: ^1.0.4  # Thêm thư viện này để chọn ảnh
-
+  flutter_launcher_icons: "^0.13.1" # <--- THÊM DÒNG NÀY
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -119,3 +119,10 @@ carousel_slider: ^4.2.1
 firebase_core: ^2.27.0
 cloud_firestore: ^4.15.8
 intl: ^0.19.0 # Để định dạng tiền tệ
+flutter_launcher_icons:
+  # Thiết lập chung
+  android: true
+  ios: true
+  # ĐƯỜNG DẪN ĐẾN ICON CỦA BẠN (Đã chuẩn bị ở B1)
+  image_path: "assets/images/logo_darter_orange.jpg"
+  min_sdk_android: 21 # SDK tối thiểu của Android.
